# hatching-demo

./: CMakeLists.txt  LICENSE  README.md  main.py  unit_test.py
framework/include/framework/: mesh.h
framework/src/: image.cpp  mesh.cpp
